the beginning of the end of the LMS

--- a/src/per-spec-tive/per-spec-tive.html
+++ b/src/per-spec-tive/per-spec-tive.html
@@ -1,4 +1,5 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
 <!--
 `per-spec-tive`
@@ -25,7 +26,7 @@ A LRN polymer app
         min-width: 1rem;
       }
     </style>
-    <paper-button raised>Hello world!</paper-button>
+    <paper-button raised>true understanding of the relative importance of things; a sense of proportion.</paper-button>
   </template>
 
   <script>
