more deps in place

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <link rel="import" href="/src/per-spec-tive/per-spec-tive.html">
   </head>
   <body>
-    <per-spec-tive></per-spec-tive>
+    <per-spec-tive end-point="demo/example.json"></per-spec-tive>
   </body>
 </html>
