--- a/src/per-spec-tive/per-spec-tive.html
+++ b/src/per-spec-tive/per-spec-tive.html
@@ -1,17 +1,20 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/iron-list/iron-list.html">
+<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/simple-colors/simple-colors.html">
 
 <!--
 `per-spec-tive`
-A LRN polymer app
+Giving learners a new perspective on education.
 
 @demo ../../demo/index.html
 
 @microcopy - the mental model for this app
- -
- -
- -
-
+ - perspective - a change in viewpoint, angle of seeing something
 -->
 
 <dom-module id="per-spec-tive">
@@ -19,20 +22,93 @@ A LRN polymer app
     <style>
       :host {
         display: block;
+        transition: .6s all linear;
+        background-color: transparent;
+        opacity: 1;
       }
-      paper-button {
-        padding: 0;
-        margin: 0;
-        min-width: 1rem;
+      :host[outline-loading] {
+        opacity: .6;
+        background-color: #999999;
+      }
+      paper-card {
+        width: 250px;
+        height: 250px;
+      }
+      #list {
+        min-height: 50vh;
+        width: 100%;
       }
     </style>
-    <paper-button raised>true understanding of the relative importance of things; a sense of proportion.</paper-button>
+    <iron-ajax
+      auto
+      id="endpoint"
+      url="[[endPoint]]"
+      loading="{{outlineLoading}}"
+      handle-as="json"
+      last-response="{{_outlineData}}"
+      debounce-duration="300"></iron-ajax>
+    <iron-list grid id="list" items="[[outline]]">
+      <template>
+        <paper-card heading="[[item.title]]" image="" elevation="1" animated-shadow="true">
+          <div class="card-content">
+            A card
+          </div>
+          <div class="card-actions">
+            <paper-icon-button icon="add"></paper-icon-button>
+            <paper-icon-button icon="copy"></paper-icon-button>
+            <paper-icon-button icon="delete"></paper-icon-button>
+          </div>
+        </paper-card>
+      </template>
+    </iron-list>
+    
   </template>
 
   <script>
     Polymer({
       is: 'per-spec-tive',
       properties: {
+        /**
+         * State of outline loading
+         */
+        outlineLoading: {
+          type: Boolean,
+          reflectToAttribute: true,
+        },
+        /**
+         * Location of data to kick us off
+         */
+        endPoint: {
+          type: String,
+        },
+        /**
+         * Outline data loaded from endPoint.
+         */
+        _outlineData: {
+          type: Object,
+          observer: '_outlineRawDataChanged',
+        },
+        /**
+         * Outline
+         */
+        outline: {
+          type: Array,
+          observer: '_outlineChanged',
+        },
+      },
+      /**
+       * Notice outline data has changed off the end point
+       */
+      _outlineRawDataChanged: function (newValue, oldValue) {
+        if (newValue != null && typeof newValue.items !== typeof undefined) {
+          this.set('outline', []);
+          this.set('outline', newValue.items);
+        }
+      },
+      /**
+       * Notice items in the outline have changed.
+       */
+      _outlineChanged: function (newValue, oldValue) {
       },
       /**
        * Simple way to convert from object to array.
